fix bug with hamburger overlapping logo

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -125,7 +125,7 @@ body {
   height: 0px;
   transition: all 0.2s ease-in;
   overflow-y: hidden;
-  top: 55px;
+  top: 60px;
   left: 0px;
 }
 .nav > .nav-links > a {
